design: fixing gaps

--- a/src/components/PerformanceInsights/PerformanceInsights.css
+++ b/src/components/PerformanceInsights/PerformanceInsights.css
@@ -37,7 +37,7 @@
   display: flex;
   /* grid-template-columns: repeat(2, minmax(0, 1fr)); */
   flex-wrap: wrap;
-  gap: 6px;
+  gap: 10px;
 }
 
 .insights-grid > * {
