--- a/src/components/ScoreColumnComponent/ScoreColumnGraph/ScoreColumn.css
+++ b/src/components/ScoreColumnComponent/ScoreColumnGraph/ScoreColumn.css
@@ -6,7 +6,7 @@
 } */
 
 .chart-container {
-  gap: 8px;
+  gap: 12px;
   flex: 1;
   display: flex;
   width: 100%;
@@ -258,7 +258,7 @@ tspan {
 
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 12px;
 }
 
 .chart-title {
